--- a/src/main/resources/META-INF/resources/primefaces-adminlte/package.json
+++ b/src/main/resources/META-INF/resources/primefaces-adminlte/package.json
@@ -25,10 +25,12 @@
 	"scripts": {
 		"test": "grunt"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"grunt": ">=1.5.3"
+	},
 	"devDependencies": {
 		"commitplease": "2.3.0",
-		"grunt": "0.4.5",
+		"grunt": ">=1.5.3",
 		"grunt-bowercopy": "1.2.4",
 		"grunt-cli": "0.1.13",
 		"grunt-compare-size": "0.4.0",
